@@ -5,7 +5,7 @@ $lang['backup']['date']			= "Czas ostatniego backupu: ";
 $lang['backup']['update']		= "Uwórz Backup";
 $lang['backup']['update_desc']	= "Tworzy backup";
 $lang['backup']['already']		= "Backup już istnieje<br/><br/><a href=\"?module=backup\"> << powrót</a>";
-$lang['backup']['download']		= "pobierz";
+$lang['backup']['download']		= "Pobierz";
 $lang['backup']['delete']		= "Skasuj backup";
 $lang['backup']['delete_desc']	= "Kasuje backup";
 $lang['backup']['update_info']	= "Backup update:";
